@@ -1,10 +1,0 @@
-name 'arusso-iptables'
-version '1.0.1'
-summary "iptables management"
-description "iptables management module that updates the iptables save file,
-  without changing the running state of iptables."
-project_page "https://github.com/arusso/puppet-iptables"
-license "MIT License"
-dependency 'ripienaar/concat', '>= 0.2.0'
-dependency 'puppetlabs/stdlib', '>= 2.6.0'
-dependency 'arusso/oski', '>= 0.0.1'
