@@ -1,0 +1,27 @@
+{
+  "name": "arusso-iptables",
+  "version": "1.1.0",
+  "author": "arusso",
+  "summary": "iptables management",
+  "license": "MIT",
+  "source": "https://github.com/arusso/puppet-iptables",
+  "issues_url": "https://github.com/arusso/puppet-iptables/issues",
+  "project_page": "https://github.com/arusso/puppet-iptables",
+  "description": "iptables management module that updates the iptables save file,\n  without changing the running state of iptables.",
+  "dependencies": [
+    {"version_requirement":">= 0.2.0","name":"ripienaar/concat"},
+    {"version_requirement":">= 0.0.1","name":"arusso/oski"},
+    {"version_requirement":">= 2.6.0","name":"puppetlabs/stdlib"}
+  ],
+  "operatingsystem_support": [
+    {
+      "operatingsystem": "RedHat",
+      "operatingsystemrelease": [ "5", "6" ]
+    }
+  ],
+  "tags": [
+    "iptables",
+    "security",
+    "firewall"
+  ]
+}
